--- a/learnCSS/main.css
+++ b/learnCSS/main.css
@@ -1,18 +1,72 @@
+html {
+    font-family: "Times New Roman", serif, sans-serif;
+}
+
 body {
+/*
     background-image: url(blackhole.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
+*/
+
+    background-color: #444;
+/*    text-align: center;*/
+    
 }
+
 
 h1, h2, h3 {
     color: #ffffff;
     text-shadow: 2px 2px 5px black;
     line-height: 1rem;
     font-family: sans-serif;
+    line-height: 1rem;
+}
+
+h2 {
+    font-size: 30px;
+    font-style: italic;
+}
+
+.formatting {
+    font-size: 25px;
+    line-height: 2em;
+    color:white;
+}
+
+a {
+    text-decoration: none;
+    font-size: 20px;
+    color: yellow;
+    letter-spacing: 10px;
+    word-spacing: 30px;
+    text-transform: uppercase;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    padding: 5px;
+    opacity: 1;
+    margin: auto;
+    display: block;
 }
 
 .borderImg {
-    border: 5px dashed red;   
+    border-radius: 10px;
+    width: 200px;
+    height: 200px;
+    border: 2px solid #ddd;
+    padding: 5px;
+}
+
+button {
+    color:white;
+    background-color: red;
+    border-radius: 12px;
+    border: none;
+    font-size: 25px;
+    padding: 10px 5px;
 }
 
 ul li {
@@ -24,3 +78,36 @@ ul > li {
     color: yellow;
 }
 
+.row {
+    display: flex;
+    width: 100%;
+}
+
+.row::after {
+    display: block;
+    clear: both;
+    content: "";
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+* {
+    box-sizing: border-box;
+}
+
+[class*="col-"] {
+    border: 2px solid red;
+    padding: 15px;
+    float: left;
+}
